styles: Fix footer-bg-img not showing on content pages (#38)

--- a/config/static/css/pycon.css
+++ b/config/static/css/pycon.css
@@ -15,3 +15,7 @@ h4 {
     font-size: 1.5rem !important;
     margin-bottom: 1.25rem !important;
 }
+
+.bg-img-3 {
+    background-position: bottom !important;
+}
